--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.rabbitmq.password=guest
 xiaolingUseJava.rabbitmq.exchange=xiaolingUseJava.exchange
 xiaolingUseJava.rabbitmq.queue=xiaolingUseJava.queue
 xiaolingUseJava.rabbitmq.routingkey=xiaolingUseJava.routingkey
+server.port = 8082
